# CrewAI-MultiAgent-Database-Interaction

./: README.md  documento.txt  pyproject.toml  volo.sql
logs/: informazioni_per_utente.md  rapporto_modifica.json  rapporto_visualizza.json
src/project_work_fly/: crew.py  guardrail.py  main.py  rag_tool.py
src/project_work_fly/config/: agents.yaml  tasks.yaml
src/project_work_fly/db/: chroma.sqlite3
src/project_work_fly/logs/: rapporto_modifica.json  rapporto_visualizza.json
tests/: test.py
