[project]
name = "project_work_fly"
version = "0.1.0"
description = "project_work_fly using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
project_work_fly = "project_work_fly.main:run"
run_crew = "project_work_fly.main:run"
train = "project_work_fly.main:train"
replay = "project_work_fly.main:replay"
test = "project_work_fly.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
